fix blurry caused by class weui-dialog

--- a/src/styles/weui/widget/weui_tips/weui_dialog.less
+++ b/src/styles/weui/widget/weui_tips/weui_dialog.less
@@ -5,9 +5,11 @@
     z-index: 5000;
     width: @dialog-width;
     max-width: @dialog-max-width;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
 
     background-color: @weuiDialogBackgroundColor;
     text-align: center;
